# taskz

./: .gitignore  CMakeLists.txt  \
airport_counter/: main.cpp
anagrams/: main.cpp
assigment_copy_vector/: main.cpp  vector.h
avrg_temperature/: main.cpp
basic_assertion_synonymns/: main.cpp
basic_assertion_synonymns_files/: CMakeLists.txt  main.cpp  synonymns.cpp  synonymns.h  test_runner.h  tests.h
binary_addition/: main.cpp
blogs_explore/: CMakeLists.txt  main.cpp
booking_algorithm_optimized/: main.cpp
build_arithmetic_expression/: CMakeLists.txt  expr.cpp  expr.h  main.cpp
bus_stops/: main.cpp
comparators_generator/: airline_ticket.h  main.cpp
concurrent_map/: CMakeLists.txt  main.cpp  map.h
concurrent_map_2/: CMakeLists.txt  main.cpp  map.h
count_bits/: main.cpp
demograph_iterator/: main.cpp
deque_template/: main.cpp  test.h
dispatching/: CMakeLists.txt  game_object.cpp  game_object.h  main.cpp
events_bd/: date.h  db.cpp  query.h
events_db/: CMakeLists.txt  date.cpp  db.h  main.cpp  query.cpp
expresses_algorithm_optimization/: main.cpp
figure_set/: main.cpp
find_element_in_set_iterator/: main.cpp
find_nearest_element/: main.cpp
find_start_with/: main.cpp
find_start_with_2/: main.cpp
fs_example/: main.cpp  text.txt
get_ref_strict/: main.cpp
get_sum/: main.cpp
hash_table/: main.cpp
highest_scoring_word/: main.cpp
ini_lib/: CMakeLists.txt  ini.cpp  ini.h  main.cpp
int_type_blocks_weight/: main.cpp
is_palindrom_tests/: main.cpp
josephus_permutation/: main.cpp
klass_function/: main.cpp
klass_function_advanced/: main.cpp
lang_learner_optimization/: main.cpp  profiler.h
lazy_value/: CMakeLists.txt  lazy_value.h  main.cpp
logger/: main.cpp
matrix/: main.cpp
matrix_sum_mutlithreading/: CMakeLists.txt  main.cpp  paginate.h
max_element_by_predicate/: main.cpp
merge_sort1/: main.cpp
merge_sort1_profiler/: main.cpp
merge_sort2/: main.cpp
merge_sort3/: main.cpp
move_sems_in_simple_vector/: main.cpp  vector.h
names_klass/: main.cpp
names_klass_1/: main.cpp
names_klass_2/: CMakeLists.txt  main.cpp  person.cpp  person.h
names_klass_3/: main.cpp  person.cpp  person.h
notifier/: main.cpp
number_permutation/: main.cpp
objects_pool/: main.cpp
odd_or_even/: main.cpp
own_vector/: main.cpp  simple_vector.h
paginator/: main.cpp  paginate.h  test.h
people_queue/: main.cpp
person_to_h_set/: main.cpp
personal_budget/: date.cpp  date.h  main.cpp
personal_budget_plus/: CMakeLists.txt  date.cpp  date.h  main.cpp
pig_it/: main.cpp
pipeline_builder/: builder.h  main.cpp
point_to_h_set/: main.cpp
print_vector_part_iterator/: main.cpp
printer_error/: main.cpp
priority_collection/: main.cpp
profiler/: profiler.h
program_decomp/: main.cpp
program_decomp_2/: CMakeLists.txt  bus_manager.cpp  bus_manager.h  main.cpp  query.cpp  query.h  responses.cpp  responses.h
range_iterator/: main.cpp
rational_numbers/: main.cpp
rational_numbers_advanced/: main.cpp
rational_numbers_sub_add/: main.cpp
rational_tests/: main.cpp
regions_base/: main.cpp
remove_dups_iterator/: main.cpp
roman_numerals_decoder/: main.cpp
search_server/: CMakeLists.txt  main.cpp  profiler.h  search_server.cpp  search_server.h
secondary_index/: main.cpp
simple_encryption/: main.cpp
simple_parser/: main.cpp  parser.h
simple_unit_testing/: test.h
single_linked_list/: main.cpp
sinonyms/: main.cpp
sort_bypass_register/: main.cpp
sorted_strings_klass/: main.cpp
spending_money/: json.h
spending_money_json/: CMakeLists.txt  json.cpp  main.cpp  test.h
spending_money_xml/: CMakeLists.txt  main.cpp
spin_greather_then_5/: main.cpp
split_into_sentences/: main.cpp
sq_in_rect/: main.cpp
stack_vector/: main.cpp  stack_vector.h
strings_groups/: main.cpp
students_sort_optimization/: main.cpp  profiler.h  student.h
swap_sort_copy/: main.cpp
sync_2/: CMakeLists.txt  sync.h
synchronized/: CMakeLists.txt  main.cpp  sync.h
table_klass/: main.cpp
team_tasks/: main.cpp
template_all_in_sqr/: CMakeLists.txt  main.cpp
text_editor/: CMakeLists.txt  editor.h  main.cpp
through_bin_tree/: main.cpp
translator/: main.cpp
uniq_id_macro/: main.cpp
unique_ptr/: CMakeLists.txt  main.cpp  unique.h
unique_strings/: main.cpp
unit_testing/: test.h
update_airline_ticket/: airline_ticket.h  main.cpp
valid_braces/: main.cpp
web_server_stats/: main.cpp  web_serv_http_request.h  web_serv_stats.h
zeros_to_end/: main.cpp
zoopark_unque_ptr/: animals.h  main.cpp
