cmake_minimum_required(VERSION 3.8)
project("taskz" LANGUAGES CXX VERSION 0.0.1)
set(CMAKE_BUILD_TYPE Debug)

# Completed katas
#add_subdirectory("binary_addition")
#add_subdirectory("get_sum")
#add_subdirectory("count_bits")
#add_subdirectory("printer_error")
#add_subdirectory("odd_or_even")
#add_subdirectory("roman_numerals_decoder")
#add_subdirectory("sq_in_rect")
#add_subdirectory("simple_encryption")
#add_subdirectory("zeros_to_end")
#add_subdirectory("highest_scoring_word")
#add_subdirectory("spin_greather_then_5")
#add_subdirectory("valid_braces")
#add_subdirectory("pig_it")
#add_subdirectory("avrg_temperature")
#add_subdirectory("people_queue")
#add_subdirectory("anagrams")
#add_subdirectory("bus_stops")
#add_subdirectory("unique_strings")
#add_subdirectory("sinonyms")
#add_subdirectory("sort_bypass_register")
#add_subdirectory("sorted_strings_klass")
#add_subdirectory("names_klass")
#add_subdirectory("klass_function")
#add_subdirectory("klass_function_advanced")
#add_subdirectory("rational_numbers")
#add_subdirectory("rational_numbers_advanced")
#add_subdirectory("matrix")
#add_subdirectory("int_type_blocks_weight")
#add_subdirectory("regions_base")
#add_subdirectory("team_tasks")
#add_subdirectory("template_all_in_sqr")
#add_subdirectory("get_ref_strict")
#add_subdirectory("program_decomp")
#add_subdirectory("basic_assertion_synonymns")
#add_subdirectory("rational_tests")
#add_subdirectory("is_palindrom_tests")
#add_subdirectory("program_decomp_2")
#add_subdirectory("basic_assertion_synonymns_files")
#add_subdirectory("print_vector_part_iterator")
#add_subdirectory("find_element_in_set_iterator")

add_subdirectory("demograph_iterator")
