cmake_minimum_required(VERSION 3.8)
project("taskz" LANGUAGES CXX VERSION 0.0.1)

if(NOT CMAKE_BUILD_TYPE)
    set(CMAKE_BUILD_TYPE Debug)
endif()

set(CMAKE_CXX_FLAGS "-Wall -Wextra")
set(CMAKE_CSS_FLAGS_DEBUG "-g")
set(CMAKE_CSS_FLAGS_RELEASE "-O2")

# Completed katas
#add_subdirectory("binary_addition")
#add_subdirectory("get_sum")
#add_subdirectory("count_bits")
#add_subdirectory("printer_error")
#add_subdirectory("odd_or_even")
#add_subdirectory("roman_numerals_decoder")
#add_subdirectory("sq_in_rect")
#add_subdirectory("simple_encryption")
#add_subdirectory("zeros_to_end")
#add_subdirectory("highest_scoring_word")
#add_subdirectory("spin_greather_then_5")
#add_subdirectory("valid_braces")
#add_subdirectory("pig_it")
#add_subdirectory("avrg_temperature")
#add_subdirectory("people_queue")
#add_subdirectory("anagrams")
#add_subdirectory("bus_stops")
#add_subdirectory("unique_strings")
#add_subdirectory("sinonyms")
#add_subdirectory("sort_bypass_register")
#add_subdirectory("sorted_strings_klass")
#add_subdirectory("names_klass")
#add_subdirectory("klass_function")
#add_subdirectory("klass_function_advanced")
#add_subdirectory("rational_numbers")
#add_subdirectory("rational_numbers_advanced")
#add_subdirectory("matrix")
#add_subdirectory("int_type_blocks_weight")
#add_subdirectory("regions_base")
#add_subdirectory("team_tasks")
#add_subdirectory("template_all_in_sqr")
#add_subdirectory("get_ref_strict")
#add_subdirectory("program_decomp")
#add_subdirectory("basic_assertion_synonymns")
#add_subdirectory("rational_tests")
#add_subdirectory("is_palindrom_tests")
#add_subdirectory("program_decomp_2")
#add_subdirectory("basic_assertion_synonymns_files")
#add_subdirectory("print_vector_part_iterator")
#add_subdirectory("find_element_in_set_iterator")
#add_subdirectory("demograph_iterator")
#add_subdirectory("remove_dubs_iterator")
#add_subdirectory("number_permutation")
#add_subdirectory("merge_sort1")
#add_subdirectory("merge_sort2")
#add_subdirectory("personal_budget")
#add_subdirectory("personal_budget_plus")
#add_subdirectory("names_klass_1")
#add_subdirectory("names_klass_2")
#add_subdirectory("names_klass_3")
#add_subdirectory("find_nearest_element")
#add_subdirectory("find_start_with")
#add_subdirectory("find_start_with_2")
#add_subdirectory("build_arithmetic_expression")
#add_subdirectory("notifier")
#add_subdirectory("figure_set")
#add_subdirectory("events_db")
#add_subdirectory("simple_parser")
#add_subdirectory("max_element_by_predicate")
#add_subdirectory("logger")
#add_subdirectory("uniq_id_macro")
#add_subdirectory("comparators_generator")
#add_subdirectory("update_airline_ticket")
#add_subdirectory("table_klass")
#add_subdirectory("deque_template")
#add_subdirectory("paginator")
#add_subdirectory("range_iterator")
#add_subdirectory("merge_sort1_profiler")
#add_subdirectory("students_sort_optimization")
#add_subdirectory("lang_learner_optimization")
#add_subdirectory("expresses_algorithm_optimization")
#add_subdirectory("booking_algorithm_optimized")
#add_subdirectory("swap_sort_copy")
#add_subdirectory("single_linked_list")
#add_subdirectory("own_vector")
#add_subdirectory("objects_pool")
#add_subdirectory("stack_vector")
#add_subdirectory("translator")
#add_subdirectory("airport_counter")
#add_subdirectory("web_server_stats")


add_subdirectory("text_editor")
